# gdk

./: .gitlab-ci.yml  .travis.yml
subprojects/: gdk_rpc.wrap
subprojects/gdk_rpc-meson/: meson.build
tools/: buildgdk_rpc.sh
